--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "scripts": {
     "test": "jest"
   },
+  "standard": {
+    "env": ["jest"]
+  },
   "devDependencies": {
     "husky": "^7.0.4",
     "jest": "^27.4.7",
