--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Diego Almeida <diego.almeida@memed.com.br>",
   "license": "MIT",
   "scripts": {
+    "test": "jest --watchAll",
     "test:staged": "jest"
   },
   "standard": {
