--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Diego Almeida <diego.almeida@memed.com.br>",
   "license": "MIT",
   "scripts": {
-    "test": "jest --watch --silent --noStackTrace",
-    "test:staged": "jest --passWithNoTests --findRelatedTests --silent --noStackTrace",
-    "test:ci": "jest --noStackTrace --silent --coverage"
+    "test": "jest --silent --colors --noStackTrace --passWithNoTests",
+    "test:unit": "yarn test -- --watch",
+    "test:staged": "yarn test -- --findRelatedTests",
+    "test:ci": "yarn test -- --coverage"
   },
   "standard": {
     "env": ["jest"]
